Bug 1147194 - Do scroll info layer hoisting when building the display list. r=tn